--- a/fontend/package.json
+++ b/fontend/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.3.1",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
+    "@mui/styled-engine-sc": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "app": "^0.1.0",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
     "react": "^17.0.2",
@@ -16,6 +19,7 @@
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.10",
     "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^2.1.4"
