--- a/fontend/package.json
+++ b/fontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "app": "^0.1.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
