--- a/fontend/package.json
+++ b/fontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.3.10",
     "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^2.1.4"
