--- a/fontend/package.json
+++ b/fontend/package.json
@@ -32,7 +32,8 @@
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.3.10",
     "sweetalert2-react-content": "^4.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
