--- a/fontend/package.json
+++ b/fontend/package.json
@@ -10,6 +10,8 @@
     "@mui/styled-engine-sc": "^5.3.0",
     "@mui/styles": "^5.5.0",
     "@mui/x-data-grid": "^5.8.0",
+    "@stripe/react-stripe-js": "^1.7.2",
+    "@stripe/stripe-js": "^1.29.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
