--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.1.8",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.5.0",
     "stripe": "^8.219.0"
   }
 }
