--- a/fontend/package.json
+++ b/fontend/package.json
@@ -30,6 +30,7 @@
     "react-native-webview": "^11.17.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.3.10",
